# qgis-plugin-package-ci

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt
qgis_plugin_package_ci/: __main__.py  assets.py  changelog.py  errors.py  main.py  package.py  parameters.py  plugins.xml.template  release.py  upload.py
qgispluginci/: changelog.py  cli.py  parameters.py  release.py  utils.py  version_note.py
qgispluginci/translation_clients/: baseclient.py  transifex.py
requirements/: dev.txt  tests.txt
tests/: .gitignore  conftest.py  plugins.xml.expected  pytest.ini  test_changelog.py  test_cli.py  test_package.py  test_parameters.py  test_release.py
tests/fixtures/: .qgis-plugin-package-ci.toml  pyproject.toml
tests/fixtures/plugin_ci_testing/: metadata.txt
