[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "qgis-plugin-package-ci"
version = "3.0.0a0"
authors = [
    {name = "Denis Rouzaud", email = "denis@opengis.ch"},
    {name = "Etienne Trimaille", email = "etienne.trimaille@gmail.com"},
    {name = "Julien Moura", email = "dev@ingeoveritas.com"},
    {name = "David Marteau", email = "david.marteau@3liz.com"},
]
description = "Let qgis-plugin-ci package and release your QGIS plugins for you. Have a tea or go hiking meanwhile. Contains scripts to perform automated testing and deployment for QGIS plugins. These scripts are written for and tested on GitHub Actions, GitLab CI, Travis-CI, and Transifex."
requires-python = ">=3.12"
keywords = ["QGIS", "CI", "changelog", "plugin"]
license = {text = "GPLv3"}
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: System Administrators",
        "Intended Audience :: Developers",
        "Intended Audience :: Information Technology",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "GitPython>=3.1,<3.2",
    "PyGithub>=2,<2.7",
    "python-slugify>=4.0,<8.1",
    "pyyaml>=5.4,<6.1",
    "six>=1.16.0",
    "tomli >= 2.2; python_full_version < '3.11'",
    "transifex-python>=3.2,<4.0",
]

[project.scripts]
qgis-plugin-ci = "qgispluginci.cli:cli"

[project.urls]
homepage = "https://opengisch.github.io/qgis-plugin-ci/"
documentation = "https://opengisch.github.io/qgis-plugin-ci/"
repository = "https://github.com/opengisch/qgis-plugin-ci/"
tracker = "https://github.com/opengisch/qgis-plugin-ci/issues"


#[project.optional-dependencies]
#transifex = ["transifex-python>=3.2,<4.0"]

[dependency-groups]
dev = [
    {include-group = "tests"},
    {include-group = "lint" },
]
tests = [
    "pytest",
]
lint = [
    "ruff",
    "mypy",
    "bandit",
    "types-PyYAML",
    "types-requests",
]

[tool.uv.build-backend]
module-name = ["qgispluginci"]
module-root = ""

#
# Ruff
#
# https://doc.astral.sh/ruff/configuration
#

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = [
    ".venv",
    ".local",
]

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "ANN", "W", "T", "COM", "RUF"]
# COM812 conflict with formatter
ignore = [
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN401",
    "T201",
    "COM812",
    # TODO: Temporary ignore linter errors until
    # they are fixed
    "E20",     # Whitespace before/after element
    "E402",    # E402 Module level import not at top of file
    "E501",    # Line too long
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN205",  # Missing return type annotation for staticmethod
    "ANN206",  # Missing return type annotation for classmethod
    "RUF012",  # Mutable class attributes should be annotated
    "RUF013",  # PEP 484 prohibits implicit `Optional`
]
allowed-confusables = ["’"]  # Used in parsing methods

[tool.ruff.lint.per-file-ignores]
"test/*" = [
    "ANN201",
]

[tool.ruff.lint.isort]
lines-between-types = 1
known-third-party = [
    "qgis",
]
order-by-type = true

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true
suppress-none-returning = true
suppress-dummy-args = true

#
# Mypy
#
[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "qgis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "transifex.*"
ignore_missing_imports = true
